tests/rosetta/out/Dart/active-directory-search-for-a-user.error
run error: exit status 254
../../tests/rosetta/out/Dart/active-directory-search-for-a-user.dart:28:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/active-directory-search-for-a-user.dart:6:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/active-directory-search-for-a-user.dart:15:52: Error: A value of type 'String' can't be assigned to a variable of type 'num'.
      if (i.toString().compareTo(groups.length - 1.toString()) < 0) {
                                                   ^
../../tests/rosetta/out/Dart/active-directory-search-for-a-user.dart:15:48: Error: The argument type 'num' can't be assigned to the parameter type 'String'.
      if (i.toString().compareTo(groups.length - 1.toString()) < 0) {
                                               ^
../../tests/rosetta/out/Dart/active-directory-search-for-a-user.dart:18:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      i = (i as num) + 1;
                     ^
../../tests/rosetta/out/Dart/active-directory-search-for-a-user.dart:29:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/active-directory-search-for-a-user.dart:53:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/active-directory-search-for-a-user.dart:82:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/active-directory-search-for-a-user.dart:87:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/active-directory-search-for-a-user.dart:91:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
